fix curriculum collapse-expand lesson list

--- a/assets/scss/pages/_single-course.scss
+++ b/assets/scss/pages/_single-course.scss
@@ -13,8 +13,6 @@
 
   &--title-tag {
     font-size: $mto-text-sm;
-    // padding: 4px 8px;
-    // color: white;
     border-radius: 50px;
     position: absolute;
     top: 0;
@@ -111,7 +109,11 @@
   }
   // Curriculum tab
   &--tcurriculum {
-    ul.details {
+    .mto-stab--shortinfo {
+      margin-bottom: 10px;
+    }
+
+    ul.mto-shortinfo-wrap {
       list-style: none;
       display: flex;
       flex-direction: row;
@@ -119,15 +121,85 @@
       margin: inherit;
       font-weight: 600;
     }
+
     ul li::before {
-      content: "\2022";
-      color: $mto-primary-color;
+      content: "";
+      background: $mto-primary-color;
       display: inline-block;
-      width: 1em;
+      width: 0.5em;
+      height: 0.5em;
+      margin: 0 6px 2px 0;
+      border-radius: 50px;
     }
+
     .mto-expand-collape-all {
       cursor: pointer;
       text-decoration: none;
+    }
+
+    .mto-stab--citems {
+      border-bottom: 1px solid $mto-border-color;
+      &:last-of-type {
+        border: none;
+      }
+    }
+
+    .mto-cheader {
+      padding: 16px;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+    }
+    .mto-ctitle {
+      margin: inherit;
+      font-size: $mto-text-lg;
+    }
+
+    .mto-ltc {
+      display: flex;
+      flex-direction: row;
+      gap: 16px;
+    }
+
+    .mto-cheader.active {
+      background: $mto-primary-color;
+      border-top-left-radius: 4px;
+      border-top-right-radius: 4px;
+      .mto-ctitle,
+      .mto-ltc {
+        color: white;
+      }
+    }
+
+    .mto-cbody {
+      overflow: hidden;
+      max-height: 0;
+      padding: 0 16px;
+      @include mto-default-border;
+      @include mto-border-radius;
+      border-top: 0px;
+    }
+
+    .mto-lesson-list li {
+      padding: 16px 0;
+      border-bottom: 1px solid $mto-border-color;
+      margin-bottom: 0;
+      &:last-of-type {
+        border-bottom: none;
+      }
+    }
+
+    .mto-time {
+      gap: 8px;
+      .mto-icon-svg svg {
+        width: 16px;
+        height: 16px;
+      }
+    }
+    .mto-lesson-list--btn {
+      border-radius: 100px;
+      text-transform: uppercase;
     }
   }
 
@@ -138,6 +210,7 @@
     align-items: center;
     gap: 20px;
   }
+
   &-rs {
     @include mto-shadow-2;
     margin: 20px auto;
@@ -150,6 +223,7 @@
       fill: $mto-primary-color;
     }
   }
+
   &--turating {
     text-align: center;
   }
